--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
 <body style="padding: 50px; vertical-align: middle">
 <form action="addhtml" method="post">
     <div class="jumbotron">
-        <h1 class="text-center">Попробуйте :reLink!</h1>
+        <h1 class="text-center">Попробуйте :reLink! DARK</h1>
         <p class="text-center">Этот сервис поможет вам сделать большие ссылки маленькими.
             Вставьте ссылку в поле ниже и нажмите кнопку Укороить</p>
         <div class="container-fluid">
