--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,16 +6,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
-<body style="padding: 50px; vertical-align: middle">
+<body style="padding: 50px; vertical-align: middle; background-color: black;">
 <form action="addhtml" method="post">
-    <div class="jumbotron">
+    <div class="jumbotron" style="background-color: darkslategray; color: darksalmon">
         <h1 class="text-center">Попробуйте :reLink! DARK</h1>
         <p class="text-center">Этот сервис поможет вам сделать большие ссылки маленькими.
             Вставьте ссылку в поле ниже и нажмите кнопку Укороить</p>
         <div class="container-fluid">
             <div class="input-group text-center">
                 <div class="input-group-prepend">
-                    <button class="btn btn-outline-secondary" type="submit">Укороить!</button>
+                    <button class="btn btn-outline-secondary" type="submit"
+                            style="background-color: darksalmon">Укороить!</button>
                 </div>
                 <input type="text" class="form-control" placeholder="Вставьте сюда ссылку целиком (включая http://)"
                        name="link" aria-describedby="copyBtn"/>
@@ -23,5 +24,6 @@
         </div>
     </div>
 </form>
+
 </body>
 </html>
